Fix h2 bottom border
Altered the rotated element back to the image
rather than its container. So the dotted border
above wasn't invisible where it met container box.

Repositioned related text.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   padding: 0;
   background-color: darkgoldenrod;
@@ -28,7 +28,7 @@ body {
   margin: auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-between;
   margin-bottom: 100px;
   box-shadow: 0px 0px 10px 3px blanchedalmond;
@@ -50,6 +50,7 @@ h2 {
   box-sizing: content-box;
   margin: 100px 0;
   border-bottom: 2px dotted blanchedalmond;
+  z-index: 2;
 }
 
 .header1,
@@ -128,17 +129,25 @@ h2 {
   justify-content: center;
   position: relative;
   left: 30%;
-  top: 75px;
+  z-index: 0;
 }
 
 .rotateBack {
   transform: rotate(-90deg);
 }
 
-p.rotateBack {
+p.organP {
   position: relative;
-  top: 200px;
-  left: 20%;
+  left: -27%;
+  top: 100%;
+  max-height: 2em;
+  margin-top: 2%;
+}
+
+.organ {
+  position: relative;
+  left: 14.25%;
+  bottom: 40%;
 }
 
 .footerImgBox {
